# dexgluco

./: AGENTS.md  Cargo.toml  DESIGN.md  PROTOCOL.md  README.md  TODO.md  sensors.db  shell.nix
src/: lib.rs  main.rs
src/core/: mod.rs  types.rs
src/io/: mod.rs  qr.rs  storage.rs  task.rs
src/io/ble/: certs.rs  jpake.rs  mod.rs  protocol.rs
tests/: core_test.rs  io_test.rs
tests/data/: sensor-result.txt  sensor.txt
