[package]
name = "dexgluco"
version = "0.1.0"
authors = ["Deluxo <48fk01e49@mozmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.9.1"
relm4-components = "0.9.1"
rxing = { version = "0.8", features = ["image_formats"] }
image = "0.25"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
